testsuite/positive/Issue-git-0485.n
public module X
{
  internal Bar(this self : int) : void
  {
    System.Console.WriteLine(self + 2);
  }
}

module P
{
  private Foo(this self : int) : void
  {
    System.Console.WriteLine(self);
  }
  
  Main() : void
  {
    42.Foo();
    42.Bar();
  }
}


/*
BEGIN-OUTPUT
42
44
END-OUTPUT
*/ 