testsuite/negative/Issue-git-485.n
public module X
{
  private Bar(this self : int) : void
  {
    System.Console.WriteLine(self + 2);
  }
}

module P
{
  Main() : void
  {
    42.Bar(); // E: there is no member named .Bar.
  }
}
